css/timer.css
@import url("fonts.css");

html {
  font-size: 10px;
}
@media only screen and (max-width: 1024px) {
  html {
    font-size: 9.375px;
  }
}
@media only screen and (max-width: 768px) {
  html {
    font-size: 10px;
  }
}
@media only screen and (max-width: 400px) {
  html {
    font-size: 9.375px;
  }
}

html, body {
  height: 100%;
}

body {
  background: #111111;
  font-family: "Montserrat-bold", serif;
  font-size: 1.6rem;
  line-height: 3rem;
  color: #353535;
  margin: 0;
  padding: 0;
}

-----------

a:hover { 
  color: yellow;
}

.donate {
align: center;
}

.timer-container {
  max-width: 1200px;
  width: 100%;
  margin: auto;
  padding: 80px 0px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}
.time-total {
  text-align: center;
  font-size: 60px;
  margin: 100px 0px 40px;
  top: 20px;
  color: #efefef;
}
#timers {
  text-align: center;
}
.modal {
  text-align: left;
}
.modal-content {
  background-color: #1c1c1c;
}
.modal-title {
  font-weight: bold;
  font-size: 4.5rem;
  color: #cbcbcb;
}
.modal-body {
  line-height: 2;
  font-family: "librebaskerville-regular", sans-serif;
  color: #cbcbcb;
  font-style: normal;
  text-rendering: optimizeLegibility;
  margin-bottom: 2.1rem;
}
.stopwatch, .stopwatch-new {
    display: inline-block;
    background-color: #fca900;
    width: 100px;
    height: 100px;
    margin: 10px;
    border-radius: 10px;
    cursor: pointer;
    vertical-align: middle;
    position: relative;
}

.stopwatch-new span {
  padding: 20px 0px;
  display: block;
}
.stopwatch {
  background-color: #434343;
  color: #fff;
}
.stopwatch.hover-element, .stopwatch.green {
  background-color: #6aa84f;
  color: white !important;
}
/*.stopwatch:active, .stopwatch:focus {
  background-color: #434343;
}*/

.stopwatch span {
  display: block;
  padding: 10px 0px;
}
.stopwatch span.name {
  max-height: 60px;
  overflow: hidden;
}
.stopwatch span.move {
  width: 50px;
  height: 50px;
  background: #fff;
  position: absolute;
  top: 5px;
  right: 5px;
}
.stopwatch a {
  font-family: "Montserrat";
  line-height: 5px;
  text-decoration: none;
  display: block;
  color: #fff;
  position: absolute;
  left: 0px;
  top: 20px;
  width: 100%;
  height: 100%;
}
.timer_name_input_error {
  display: none;
  color: red;
  margin-top: 5px;
}

.action-btn {
    font-size: 36px;
    cursor: pointer;
    position: fixed;
    z-index: 9;
}
.plus {
    top: 20px;
    left: 20px;
}
.quest {
    top: 20px;
    right: 20px;
}
.download {
    bottom: 20px;
    right: 20px;
}
.close {
    color: #ffffff;
}

